Refactored data layer
Added new app.js, moved all data calls to here, implemented in KO
models.  Also started trying to get modal to work again.

--- a/ExpenseTracker/Views/Shared/_Layout.cshtml
+++ b/ExpenseTracker/Views/Shared/_Layout.cshtml
@@ -38,7 +38,9 @@
 		@Scripts.Render("~/bundles/jqueryui")
 		@Scripts.Render("~/bundles/twitterbootstrap")
         @Scripts.Render("~/bundles/knockout")
+        @Scripts.Render("~/bundles/static")
         @Scripts.Render("~/bundles/ko-models")
+
         @RenderSection("scripts", required: false)
     </body>
 </html>
