--- a/ExpenseTracker/Views/Home/Index.cshtml
+++ b/ExpenseTracker/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
 			</thead>
 			<tbody data-bind="template: { name: 'budgetItemTemplate', foreach: PaycheckBudgetItems }"></tbody>
 		</table>
-		Remaining: <span data-bind="text: app.utilities.formatCurrency(RemainingAmount())"></span>
+		@*Remaining: <span data-bind="text: app.utilities.formatCurrency(RemainingAmount())"></span>*@
 		<hr />
 	</li>
 </script>
