--- a/ExpenseTracker/Views/Shared/_Layout.cshtml
+++ b/ExpenseTracker/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="ExpenseTracker">
+<html lang="en" ng-app="expenseTracker">
     <head>
         <meta charset="utf-8" />
         <title>Expense Tracker</title>
