--- a/ExpenseTracker/Views/Home/Index.cshtml
+++ b/ExpenseTracker/Views/Home/Index.cshtml
@@ -110,7 +110,7 @@
 </div>
 <div class="span9">
     <div class="well" ng-controller="CalendarCtrl">
-        <div pb-calendar="{ height: 450, editable: true }" class="calendar" ng-model="events"></div>
+        <div pb-calendar="{ editable: true }" class="calendar" ng-model="events" style="width: 900px; margin: 0 auto;"></div>
     </div>
 </div>
 
