--- a/ExpenseTracker/Views/Home/Index.cshtml
+++ b/ExpenseTracker/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
 </div>
 <div class="span9">
     <div class="well" ng-controller="CalendarCtrl">
-        <div pb-calendar="{ editable: true }" class="calendar" ng-model="events" style="width: 900px; margin: 0 auto;"></div>
+        <div pb-calendar="{ editable: true }" class="calendar" ng-model="eventSource" style="width: 900px; margin: 0 auto;"></div>
     </div>
 </div>
 
