--- a/ExpenseTracker/Views/Shared/_Layout.cshtml
+++ b/ExpenseTracker/Views/Shared/_Layout.cshtml
@@ -21,9 +21,13 @@
 			{
 				padding: 9px 0;
 			}
+			
+			[ng:\cloak], [ng-cloak], .ng-cloak {
+				display: none; !important;
+			}
 		</style>
     </head>
-    <body>
+    <body ng-cloak>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container-fluid">
